# auto-cdn-test

./: Cargo.toml  test.py
src/: indexer.rs  main.rs  mem_db.rs
