[package]
name = "auto-cdn"
version = "0.1.0"
authors = ["chillfish8 <hburt2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
anyhow = "1"
async-channel = "1.6"
futures-util = "0.3"